syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  string image = 5;
  bool published = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

message PostResponse { Post post = 1; }